Fix search not working on iPhone

--- a/client/css/_add-song.scss
+++ b/client/css/_add-song.scss
@@ -1,4 +1,5 @@
 .add-song {
+  display: block;
   padding: 0.5em 1em;
 }
 
@@ -10,10 +11,6 @@
 .add-song:hover {
   background: #333;
   cursor: pointer;
-}
-
-.add-song i {
-  margin-left: 1em;
 }
 
 .add-song.dragover {
